--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "jlc-carpentry",
   "version": "1.0.0",
   "description": "Nextjs website for JLC Carpentry",
-  "main": "index.js",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run dev -w jlc-carpentry",
+    "build": "npm run build"
   },
   "repository": {
     "type": "git",
