--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "keywords": [],
   "author": "Dejan Vasic",
   "license": "ISC",
-  "homepage": "https://github.com/dejanvasic85/jlc-carpentry#readme"
+  "homepage": "https://github.com/dejanvasic85/jlc-carpentry#readme",
+  "volta": {
+    "node": "22.17.1"
+  }
 }
