--- a/renovate.json
+++ b/renovate.json
@@ -21,6 +21,11 @@
       "extends": "monorepo:nextjs",
       "groupName": "nextjs monorepo",
       "matchUpdateTypes": ["digest", "patch", "minor", "major"]
+    },
+    {
+      "matchPackageNames": "@types/node",
+      "groupName": "node types",
+      "allowedVersions": "< 23"
     }
   ]
 }
