--- a/apps/jlc-carpentry-app/package.json
+++ b/apps/jlc-carpentry-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jlc-carpentry",
+  "name": "jlc-carpentry-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,8 +18,8 @@
     "@types/node": "22.16.5",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@eslint/eslintrc": "3.3.1",
     "eslint": "9.31.0",
-    "eslint-config-next": "15.4.2",
-    "@eslint/eslintrc": "3.3.1"
+    "eslint-config-next": "15.4.2"
   }
 }
