--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "deploy": "sanity deploy"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "typescript": "5.8.3",
     "eslint": "9.31.0",
