--- a/apps/content-studio/package.json
+++ b/apps/content-studio/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "dev": "sanity dev",
     "start": "sanity start",
@@ -15,23 +15,16 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^4.1.1",
-    "react": "^19.1",
-    "react-dom": "^19.1",
-    "sanity": "^4.1.1",
-    "styled-components": "^6.1.18"
+    "@sanity/vision": "4.1.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sanity": "4.1.1",
+    "styled-components": "6.1.19"
   },
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^5.0.2",
-    "@types/react": "^19.1",
-    "eslint": "^9.28",
-    "prettier": "^3.5",
-    "typescript": "^5.8"
-  },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100,
-    "bracketSpacing": false,
-    "singleQuote": true
+    "@sanity/eslint-config-studio": "5.0.2",
+    "@types/react": "19.1.0",
+    "eslint": "9.31.0",
+    "typescript": "5.8.3"
   }
 }
