--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "turbo run dev --filter jlc-carpentry",
+    "dev": "turbo run dev --filter web",
     "build": "turbo run build",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
@@ -18,7 +18,7 @@
   },
   "keywords": [],
   "author": "Dejan Vasic",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://github.com/dejanvasic85/jlc-carpentry#readme",
   "volta": {
     "node": "22.17.1"
