--- a/apps/content-studio/package.json
+++ b/apps/content-studio/package.json
@@ -9,7 +9,9 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "lint": "eslint .",
+    "type:check": "tsc --noEmit"
   },
   "keywords": [
     "sanity"
