--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,17 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "next": "15.4.3",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.3"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "typescript": "5.8.3",
+    "@eslint/eslintrc": "3.3.1",
     "@types/node": "22.16.5",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "@eslint/eslintrc": "3.3.1",
     "eslint": "9.31.0",
-    "eslint-config-next": "15.4.3"
+    "eslint-config-next": "15.4.3",
+    "typescript": "5.8.3"
   }
 }
