--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "3.859.0",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/postcss": "4.1.11",
     "autoprefixer": "10.4.21",
@@ -17,7 +18,9 @@
     "postcss": "8.5.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "tailwindcss": "4.1.11"
+    "react-hook-form": "7.62.0",
+    "tailwindcss": "4.1.11",
+    "zod": "4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
