--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "4.1.11",
     "autoprefixer": "10.4.21",
     "next": "15.4.5",
+    "next-sanity": "10.0.10",
     "postcss": "8.5.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
