Updating the code style in claude and typecheck for turbo

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,7 @@
       "dependsOn": ["^lint"]
     },
     "type:check": {
+      "cache": false,
       "dependsOn": ["^type:check"]
     },
     "dev": {
