--- a/apps/reviews/package.json
+++ b/apps/reviews/package.json
@@ -2,7 +2,7 @@
   "name": "reviews",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "type": "module",
   "scripts": {
     "update:rating": "node ./scrapeRating.mjs",
