--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "next-sanity": "10.0.13",
     "next-seo": "6.8.0",
     "postcss": "8.5.6",
+    "reviews": "*",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "7.62.0",
