--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -11,7 +11,9 @@
     "deploy": "sanity deploy",
     "deploy-graphql": "sanity graphql deploy",
     "lint": "eslint .",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "export": "sanity dataset export",
+    "import": "sanity dataset import"
   },
   "keywords": [
     "sanity"
