--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,9 @@
         "EMAIL_FROM",
         "EMAIL_ENABLED",
         "RECAPTCHA_SECRET_KEY",
-        "GOOGLE_CLOUD_PROJECT_ID"
+        "GOOGLE_CLOUD_PROJECT_ID",
+        "SANITY_PROJECT_ID",
+        "SANITY_DATASET"
       ]
     },
     "lint": {
