--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,11 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "3.879.0",
     "@mux/mux-player-react": "3.5.3",
+    "@playwright/test": "1.55.0",
     "@portabletext/react": "4.0.2",
     "@sanity/image-url": "1.2.0",
     "@tailwindcss/forms": "0.5.10",
