Cancel in progress on push

--- a/.github/workflows/test-preview.yml
+++ b/.github/workflows/test-preview.yml
@@ -7,6 +7,10 @@ on:
       - 'apps/web/**'
       - 'packages/**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test-preview:
     runs-on: ubuntu-latest
