feat: enabling auto merge for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,7 @@
     ":pinDevDependencies",
     "group:allNonMajor"
   ],
+  "automerge": true,
   "commitMessageAction": "",
   "labels": ["dependencies"],
   "prConcurrentLimit": 3,
