--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
-name: Test Preview Deployment
+name: CI
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  push:
+    branches-ignore:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -14,7 +15,7 @@ jobs:
     container:
       image: mcr.microsoft.com/playwright:v1.55.0-jammy
     timeout-minutes: 10
-    
+
     steps:
       - uses: actions/checkout@v5
 
