--- a/apps/reviews/package.json
+++ b/apps/reviews/package.json
@@ -5,13 +5,11 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "update:rating": "node ./scrapeRating.mjs",
-    "update:reviews": "node ./scrapeReviews.mjs"
+    "update:rating": "node ./updateRating.mjs",
+    "update:reviews": "node ./updateReviews.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "puppeteer": "24.33.0"
-  }
+  "devDependencies": {}
 }
