Add GOOGLE_PLACES_API_KEY env to reviews workflow

--- a/.github/workflows/reviews.yml
+++ b/.github/workflows/reviews.yml
@@ -3,6 +3,8 @@ on:
   schedule:
     - cron: 0 18 * * *
   workflow_dispatch:
+env:
+  GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
 
 jobs:
   update-reviews:
@@ -19,7 +21,6 @@ jobs:
         run: npm install
       - name: Run
         run: |
-          npm run update:rating -w reviews
           npm run update:reviews -w reviews
       - name: Create Pull Request
         id: cpr
